# dotfiles

./: .bashrc  .env.example  .gitattributes  .gitconfig  .gitignore  .stow-local-ignore  LICENSE.md  README.md  init.sh  justfile  pyproject.toml
.agents/: .skill-lock.json
.config/: mimeapps.list  user-dirs.dirs
.config/delta/: config
.config/environment.d/: cursor.conf
.config/ghostty/: config
.config/gtk-3.0/: bookmarks  settings.ini
.config/gtk-4.0/: settings.ini
.config/hypr/: hyprland.conf
.config/kak/: kakrc
.config/mako/: config
.config/mise/: config.toml
.config/niri/: config.kdl
.config/opencode/: opencode.json  opencode.jsonc
.config/opencode/skills/brainstorming/: SKILL.md
.config/opencode/skills/using-superpowers/: SKILL.md
.config/rofi/: config.rasi  emoji.txt
.config/swappy/: config
.config/waybar/: config  config-niri  style.css
.config/zellij/: config.kdl
.config/zellij/themes/: catppuccin-mocha.kdl
.git-filters/: obs-websocket-filter  opencode-api-keys
.local/share/applications/: mimeinfo.cache  ninjabrain.desktop  spf.desktop
.var/app/com.obsproject.Studio/config/: QtProject.conf
.var/app/com.obsproject.Studio/config/obs-studio/: global.ini  user.ini
.var/app/com.obsproject.Studio/config/obs-studio/plugin_manager/: modules.json
obs/: balatro.html  be-right-back.html  ending-stream.html  ideas.md  starting-soon.html
python_utils/clickmapper/: main.py  pyproject.toml
python_utils/cuid/: main.py  pyproject.toml
python_utils/posterize/: main.py  pyproject.toml
(+10 files in other folders)
