[project]
name = "posterize"
version = "0.1.0"
description = "Image posterization and dithering utility"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "numba>=0.58.0",
]

[project.scripts]
posterize = "main:cli_entry_point"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "main"
